--- a/views/index.html
+++ b/views/index.html
@@ -19,25 +19,35 @@
   <div>
     <form id = 'chatform'>
       <p>char box</p>
-      <p>send to:<input type = "text" name = "target"></p>
+      <!--<p>send to:<input type = "text" name = "target"></p>-->
       <!--<input type = "text" name = "chatBoard" style="width: 300px; height: 200px" >-->
       <textarea id="chatbox" cols="40" rows="5"></textarea>
-      <input type = "submit" value = "submit">
+      <button id = 'sendButton'>send</button>
     </form>
+  <div>
+
+  <ul id = 'messageList'></ul>
   </body>
 
   <script type = "text/javascript" src = "/static/jquery-2.1.4.min.js"></script>
   <script type = "text/javascript" src = "/static/socket.io.js"></script>
   <script type = "text/javascript">
     $(function () {
-      var socket = io.connect();
+      var socket = io();
 
-       $('#charform').submit(function (){
-         var content = $("textarea").val();
-         var target = $("input[name = target]").val();
-         var massage = {target: target, content: content};
-         socket.emit('chat', massage);
-       })
-        
-    })
+       $('#chatform').submit(function (){
+         var content = $("#chatbox").val();
+         //var target = $("input[name = target]").val();
+         //var massage = {target: target, content: content};
+         socket.emit('chat', content);
+         $('#chatbox').val('');
+         return false;
+       });
+
+       socket.on('broadcast', function(data){
+         $('#messageList').append($('<li>').text(data));
+       });
+
+    });
+    </script>
 </html>
